--- a/CornerKitchen/RMTruckDetailView.xib
+++ b/CornerKitchen/RMTruckDetailView.xib
@@ -2,14 +2,15 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="Quicksand-Bold.ttf">
             <string>Quicksand-Bold</string>
             <string>Quicksand-Bold</string>
-            <string>Quicksand-Bold</string>
         </mutableArray>
         <mutableArray key="Quicksand-Regular.ttf">
+            <string>Quicksand-Regular</string>
             <string>Quicksand-Regular</string>
         </mutableArray>
     </customFonts>
@@ -17,23 +18,26 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="RMTruckDetailView">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="796"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="872"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="u5f-I8-EUG">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="718"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="872"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="57x-Sf-6jN">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="57x-Sf-6jN">
                             <rect key="frame" x="0.0" y="0.0" width="320" height="210"/>
                             <color key="backgroundColor" red="0.8862745098" green="0.8862745098" blue="0.88235294119999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="57x-Sf-6jN" secondAttribute="height" multiplier="32:21" id="qNP-rF-eOD"/>
+                            </constraints>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Truck Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pQk-aF-8Um">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Truck Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pQk-aF-8Um">
                             <rect key="frame" x="16" y="226" width="288" height="21"/>
                             <fontDescription key="fontDescription" name="Quicksand-Bold" family="Quicksand" pointSize="20"/>
                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Type of Food" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vGT-df-GV3">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Type of Food" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vGT-df-GV3">
                             <rect key="frame" x="16" y="255" width="288" height="21"/>
                             <fontDescription key="fontDescription" name="Quicksand-Regular" family="Quicksand" pointSize="17"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -46,7 +50,7 @@
                                     <rect key="frame" x="8" y="47" width="272" height="353"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </tableView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Menu" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OV1-IU-Efw">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Menu" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OV1-IU-Efw">
                                     <rect key="frame" x="39" y="8" width="211" height="21"/>
                                     <fontDescription key="fontDescription" name="Quicksand-Bold" family="Quicksand" pointSize="20"/>
                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -62,36 +66,42 @@
                                 <constraint firstAttribute="trailing" secondItem="5sV-CA-xBf" secondAttribute="trailing" constant="8" id="qpn-Vl-IRL"/>
                             </constraints>
                         </view>
+                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cpc-tC-TKc">
+                            <rect key="frame" x="16" y="720" width="288" height="50"/>
+                            <color key="backgroundColor" red="0.1019607843" green="0.84705882349999995" blue="0.58431372550000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="50" id="cY1-ic-B8y"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" name="Quicksand-Regular" family="Quicksand" pointSize="20"/>
+                            <state key="normal" title="Edit Profile">
+                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
+                        <constraint firstItem="nsJ-CJ-VvL" firstAttribute="top" secondItem="vGT-df-GV3" secondAttribute="bottom" constant="26" id="0cE-Bh-Z0x"/>
+                        <constraint firstAttribute="trailing" secondItem="cpc-tC-TKc" secondAttribute="trailing" constant="16" id="5eA-Fo-xfY"/>
                         <constraint firstAttribute="centerX" secondItem="vGT-df-GV3" secondAttribute="centerX" id="EhB-HS-WZb"/>
                         <constraint firstAttribute="trailing" secondItem="nsJ-CJ-VvL" secondAttribute="trailing" constant="16" id="Huh-QS-Xmi"/>
                         <constraint firstAttribute="centerX" secondItem="pQk-aF-8Um" secondAttribute="centerX" id="MTh-bY-JPo"/>
                         <constraint firstItem="nsJ-CJ-VvL" firstAttribute="leading" secondItem="u5f-I8-EUG" secondAttribute="leading" constant="16" id="MwY-ZQ-KMz"/>
+                        <constraint firstItem="cpc-tC-TKc" firstAttribute="leading" secondItem="u5f-I8-EUG" secondAttribute="leading" constant="16" id="P8P-PU-dFh"/>
                         <constraint firstItem="57x-Sf-6jN" firstAttribute="top" secondItem="u5f-I8-EUG" secondAttribute="top" id="PlU-pV-Y4Y"/>
+                        <constraint firstItem="pQk-aF-8Um" firstAttribute="top" secondItem="57x-Sf-6jN" secondAttribute="bottom" constant="16" id="b74-P1-7t7"/>
                         <constraint firstAttribute="trailing" secondItem="57x-Sf-6jN" secondAttribute="trailing" id="gUB-am-AJm"/>
+                        <constraint firstItem="vGT-df-GV3" firstAttribute="top" secondItem="pQk-aF-8Um" secondAttribute="bottom" constant="8" id="gY3-SM-q50"/>
                         <constraint firstItem="57x-Sf-6jN" firstAttribute="leading" secondItem="u5f-I8-EUG" secondAttribute="leading" id="j2J-8s-Sh5"/>
+                        <constraint firstItem="cpc-tC-TKc" firstAttribute="top" secondItem="nsJ-CJ-VvL" secondAttribute="bottom" constant="10" id="zjr-DY-sbu"/>
                     </constraints>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cpc-tC-TKc">
-                    <rect key="frame" x="16" y="726" width="288" height="50"/>
-                    <color key="backgroundColor" red="0.1019607843" green="0.84705882349999995" blue="0.58431372550000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <fontDescription key="fontDescription" name="Quicksand-Bold" family="Quicksand" pointSize="20"/>
-                    <state key="normal" title="Edit Profile">
-                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="cpc-tC-TKc" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="5Yt-BW-7ZV"/>
                 <constraint firstItem="u5f-I8-EUG" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="G2f-rK-ZfS"/>
-                <constraint firstItem="cpc-tC-TKc" firstAttribute="top" secondItem="u5f-I8-EUG" secondAttribute="bottom" constant="8" id="I80-m1-yQe"/>
                 <constraint firstItem="u5f-I8-EUG" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="kTf-63-jmB"/>
                 <constraint firstAttribute="trailing" secondItem="u5f-I8-EUG" secondAttribute="trailing" id="nAh-Pf-vHa"/>
-                <constraint firstAttribute="trailing" secondItem="cpc-tC-TKc" secondAttribute="trailing" constant="16" id="wKT-J7-4de"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
@@ -99,7 +109,7 @@
                 <outlet property="menuTableView" destination="5sV-CA-xBf" id="pcj-fv-yOQ"/>
                 <outlet property="menutView" destination="nsJ-CJ-VvL" id="hGw-lb-bln"/>
             </connections>
-            <point key="canvasLocation" x="90" y="455"/>
+            <point key="canvasLocation" x="91" y="490"/>
         </view>
     </objects>
 </document>
